--- a/css/settings.css
+++ b/css/settings.css
@@ -20007,7 +20007,7 @@ body {
   font-size: 14px;
   line-height: 1.6;
   color: #1f1f1f;
-  background: #eae7dc;
+  background: #ffffff;
 }
 
 .site-wrapper {
@@ -20033,6 +20033,7 @@ h6 {
 
 h1 {
   font-size: 50px;
+  font-weight: 700;
 }
 
 h2 {
@@ -20048,6 +20049,13 @@ h2 {
 
 h3 {
   font-size: 28px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 58px;
+  letter-spacing: 0.2px;
+  color: #333333;
 }
 
 h4 {
