--- a/css/custom.css
+++ b/css/custom.css
@@ -21746,7 +21746,8 @@ html {
             box-shadow: 0 12px 24px rgba(0, 0, 0, 0.03);
     border-radius: 8px;
     border: 1px solid #e5e5e5;
-    background-color: #ffffff;
+    background-color: #
+    ;
     padding: 30px 30px 0px;
     z-index: 99;
     opacity: 0;
@@ -21977,7 +21978,7 @@ html {
           box-shadow: 0 10px 60px rgba(35, 44, 39, 0.05);
   border-radius: 20px;
   border: 1px solid #e5e5e5;
-  background-color: #f9f9f9;
+  background-color: #FEFCF8;
   position: relative;
   overflow: hidden;
   width: 70%;
